sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:6: error: not found: value j
                   {echange(i,j)
                              ^